--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <body>
         <h1>Hello World</h1>
         <p>Soy Dylan</p>
-        <p>Hola</p>
+        <p>Hola a todos</p>
     </body>
 </html>
